clarify no changes should be made to index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="jquery.js"></script>
     <!-- Uncomment the challenges one at a time to complete them-->
-    <script type="text/javascript" src="challenges/chal1.js"></script>
-    <!-- <script type="text/javascript" src="challenges/chal2.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/chal3.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/chal4.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/chal5.js"></script> -->
+    <script type="text/javascript" src="challenges/challenge1.js"></script>
+    <!-- <script type="text/javascript" src="challenges/challenge2.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/challenge3.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/challenge4.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/challenge5.js"></script> -->
   </head>
+
+  <!-- Do not change anything below this line -->
+
+  <!--
+d8888b.  .d88b.       d8b   db  .d88b.  d888888b       .o88b. db   db  .d8b.  d8b   db  d888b  d88888b 
+88  `8D .8P  Y8.      888o  88 .8P  Y8. `~~88~~'      d8P  Y8 88   88 d8' `8b 888o  88 88' Y8b 88'     
+88   88 88    88      88V8o 88 88    88    88         8P      88ooo88 88ooo88 88V8o 88 88      88ooooo 
+88   88 88    88      88 V8o88 88    88    88         8b      88~~~88 88~~~88 88 V8o88 88  ooo 88~~~~~ 
+88  .8D `8b  d8'      88  V888 `8b  d8'    88         Y8b  d8 88   88 88   88 88  V888 88. ~8~ 88.     
+Y8888D'  `Y88P'       VP   V8P  `Y88P'     YP          `Y88P' YP   YP YP   YP VP   V8P  Y888P  Y88888P 
+  -->
+  
   <body>
     <div class="container">
 
