--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="jquery.js"></script>
     <!-- Uncomment the challenges one at a time to complete them-->
-    <script type="text/javascript" src="challenges/challenge1.js"></script>
-    <!-- <script type="text/javascript" src="challenges/challenge2.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/challenge3.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/challenge4.js"></script> -->
-    <!-- <script type="text/javascript" src="challenges/challenge5.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/100-selector.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/110-onClick.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/120-appendList.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/130-appendOnClick.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/140-add-div.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/150-meow-button.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/160-click-handlers.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/170-form-and-table.js"></script> -->
   </head>
 
   <!-- Do not change anything below this line -->
