completed third challenge

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="jquery.js"></script>
     <!-- Uncomment the challenges one at a time to complete them-->
     <!-- <script type="text/javascript" src="challenges/100-selector.js"></script> -->
-    <script type="text/javascript" src="challenges/110-onClick.js"></script>
-    <!-- <script type="text/javascript" src="challenges/120-appendList.js"></script> -->
+    <!-- <script type="text/javascript" src="challenges/110-onClick.js"></script> -->
+    <script type="text/javascript" src="challenges/120-appendList.js"></script>
     <!-- <script type="text/javascript" src="challenges/130-appendOnClick.js"></script> -->
     <!-- <script type="text/javascript" src="challenges/140-add-div.js"></script> -->
     <!-- <script type="text/javascript" src="challenges/150-meow-button.js"></script> -->
